--- a/projectFront/src/index.css
+++ b/projectFront/src/index.css
@@ -240,3 +240,23 @@ img.large{
   background-color: #ffe0e0;
 }
 
+/*Alert*/
+
+.form {
+  max-width: 60rem;
+  margin: 0 auto;
+  
+}
+.form > div {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem;
+
+}
+.form label {
+  margin: 1rem 0;
+  display: block;
+}
+.form input{
+  border-radius: 2%;
+}
