--- a/projectFront/src/index.css
+++ b/projectFront/src/index.css
@@ -258,10 +258,12 @@ img.large{
 }
 .form label {
   margin: 1rem 0;
-  display: block;
 }
 .form input{
   border-radius: 2%;
+}
+.pay{
+  display: inline-block;
 }
 
 /* Dropdown */
