--- a/projectFront/src/index.css
+++ b/projectFront/src/index.css
@@ -242,6 +242,10 @@ img.large{
 .loading {
   display: block !important;
 }
+.alert-success {
+  color: #20a020;
+  background-color: #eeffe0;
+}
 
 /*form*/
 
